modules/gdscript/tests/scripts/runtime/errors/division_by_zero.gd
#debug-only: Crashes in release

func test():
	var integer: int = 1
	integer /= 0
